# rsdbc

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
src/: app.rs  lib.rs  main.rs  platform.rs
src/dbc/: mod.rs  model.rs  parser.rs  writer.rs
tests/: roundtrip.rs
