[package]
name = "rsdbc"
version = "0.1.0"
edition = "2021"
description = "A fully functional, web-compatible CAN DBC editor written in Rust"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
# File dialogs: native pickers and, on wasm, AsyncFileDialog in the browser.
rfd = "0.15"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "Url",
    "Window",
] }
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev.package."*"]
opt-level = 2
